# rusterio

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
data/: get_test_data.sh
src/: ambassador_remote_traits.rs  backends.rs  buffer.rs  crs_geo.rs  errors.rs  indexes.rs  intersection.rs  lib.rs
src/components/: backends.rs  band.rs  bounds.rs  datasets.rs  engines.rs  file.rs  files.rs  metadata.rs  mod.rs  parser.rs  raster.rs  reader.rs  readers.rs  transforms.rs  view.rs
src/components/raster/: band.rs  group.rs  mod.rs
src/components/view/: band.rs  chunking.rs  mod.rs
src/sensors/: mod.rs  sentinel2.rs
