[package]
name = "rusterio"
version = "0.1.0"
authors = ["Tiago Sanona"]
edition = "2021"
description = "Open raster datasets into ndarray."

repository = "https://github.com/tsanona/rusterio"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
gdal = "0.17.1"
# raster-utils = { git="https://github.com/tsanona/raster-utils.git", features = ["use-rayon"] }
geo = { version="0.29.3", features = ["use-proj"] }
geo-traits = "0.2.0"
geo-booleanop = "0.3.2"
geo-rasterize = { git="https://github.com/tsanona/geo-rasterize.git", branch = "update-dependencies" }

ndarray = { version = "0.16.1", features = ["rayon"] }

rayon = "1.10.0"
itertools = "0.14.0"

thiserror = "2.0.12"

num = "0.4.3"
log = "0.4.27"
shrinkwraprs = "0.3.0"
either = "1.15.0"
derive-new = "0.7.0"
num-traits = "0.2.19"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async", "async_tokio"] }
ndarray-npy = "0.9.1"
rstest = "0.25.0"

[[bench]]
name = "benchmarks"
harness = false
